# crypto_sentiment_MLP

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ibkr-dashboard-snapshot.yml  ibkr-paper-rebalance.yml  ibkr-validate.yml
config/: paper.example.env  strategy.yaml
docs/: colab_export_exact_live_state_cell.py
logs/decisions/: decisions.csv  latest_decision.csv
logs/health/: health_status.json  signal_history.csv
logs/orders/: latest_planned_orders.csv  latest_submitted_orders.csv  submitted_orders.csv
logs/portfolio/: portfolio.csv
logs/positions/: latest_positions.csv
logs/target_weights/: latest_target_weights.csv  target_weights.csv
scripts/: check_live_text.py  import_artifacts.py  import_live_state.py  import_live_state_files.py  import_loose_artifacts.py  run_rebalance.py  validate_ibkr.py  verify_artifacts.py  write_dashboard_snapshot.py
src/qsentia_btc_sentiment_ensemble_ibkr/: __init__.py  artifacts.py  brokers.py  dashboard_logs.py  features.py  model_runtime.py  risk.py  sentiment_live.py  settings.py  signal_engine.py
tests/: test_risk.py  test_sentiment_live.py  test_signal_engine.py
